config/k8s/app/service.yaml
# k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cqrs-app-service
spec:
  selector:
    app: cqrs-app # Seleciona os Pods do Deployment
  ports:
    - protocol: TCP
      port: 3001 # Porta que o serviço expõe externamente (em localhost)
      targetPort: 3001 # Porta do container (deve bater com containerPort no Deployment)
  type: LoadBalancer # Docker Desktop mapeia isso para localhost:<port>
